--- a/year8-today.html
+++ b/year8-today.html
@@ -139,19 +139,19 @@
           <script>
             
               const schedule = [
-                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ2mW2DcB15Qp6QsPoFO8SXAdugbgRsBBYtzdLndfLRNdU' },
-                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQNm6Orc8oyT4us-oI9uaM8Aa4dG7hNVpaWXDgrbOikJ2E' },
-                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXWBHT_aT0QLibd-VhNl60AebdFNp2cPp2cmEhmenDIkU' },
-                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5zFVUqatiSbgUGaPTRPR9ASKvg8-ywEtX5kI0pTnT708' },
-                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5hkz8fI3tQbEir-H5tTF7AfbHKfbJS4GgsFUxKOCs9rk' },
-                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVSUtdk4jKSbbzl5Og_5VSARXTOAvUTH_2_uEd6OADZl0' },
-                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ-BTMI7QssRYUS00KBRTJbAbez2yhqqZaXV-HIxBgMTAk' },
-                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMugGnPxjnSJWbJPxaB5gCAUar2GODrvkAMLaK5KzhZhA' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShwP4KtRa2T4RcI0i3Cq_IAcRhAsiBpyC9yz8BJf9dswY' },
-                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSwzHojtz6KTa76pI9nn6TFAVutH0YzE45pKwbiQQNCF_E' },
-                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTAgMMABAG0TIrvTKKSy87aAQIpqgEMYO4AwenJUFIVnQo' },
                 { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT9_6ZfJ2MESo-9W6Cwi9n6Af0gWBx2HyJw2kw-Ptz3-Pc' },
-                { date: '2024-11-04', time: '06:59', url: 'n/a' }                         
+                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRNP1Yw1wJQoOuHXcUNamYATFZcwA_JZAvCyPdRDlw-FU' },
+                { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT4Xck4zIUoT4SDpjVJz3cMAbZPCMBKHbi052sMmLK4pzo' },
+                { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTP6Krqyw1GRKh1oxoU5T-9AV4xTproyeLkaVCl0-j_RWA' },
+                { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSjqyyDYg0yT7yLuXuk-K0RARzvyDIVUZLP_-v0ub8tnOo' },
+                { date: '2024-11-08', time: '06:59', url: 'hhttps://1drv.ms/p/c/8dd37d65e185b290/IQTWSxV7AiGORbi_veAhlwFqAWKXqE4lXhN61cfytnzC3LI' },
+                { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRYFTIZ5UPZRIf579fEIJVmAetLXUXAvJlo_hRPDX68xTg' },
+                { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9Sy7U_qFLR5tpjFiGF3z1AQ-PASdpzQX2t-JFh4MHEOg' },
+                { date: '2024-11-11', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'n/a' },
+                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-14', time: '06:59', url: 'n/a' },
+                { date: '2024-11-15', time: '06:59', url: 'n/a' }                                           
               ];      
       
 function updateIframeSrc() {
