--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -139,19 +139,19 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [ 
-                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTazd7QlCcfRqC5p5HqtQIIAc3CVOHD7vv2ULp7qB1kMgU' },
-                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRuZlx_lSQkQK1KBaFL5D9BAa8QoLb0JsRaZ6W5yDbvtzc' },
-                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ7UBJfEM1gTY_20N7TyfrGAYGYlS7KGJpIfDpor9UsVeg' },
-                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRXSsAnwAkRQZ4KxHO8xNneAZIr2KhnPSfb3XyZI6C4B8A' },
-                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5hkz8fI3tQbEir-H5tTF7AfbHKfbJS4GgsFUxKOCs9rk' },
-                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRL3dA3ZOjyRIQY7sqQR4UUAWRQh3UshC95joFBFrsJK5E' },
-                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYM8ybTfCAQ59NGlfOETRXAe-Qu7eCYDiy-gndx1kPV2k' },
-                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsEm2szDPqQ4vzFPoOZEGAAaRN_4JTFjONXyq0XtcoJV4' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRZnOquCUfvT6HCeoct4wTjASI7lnb8ZTw9NV1C6ADkWKY' },
-                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTtXZryIftR6QSYNAQNw2pAd9XzgxLJqbnKbD7b7Pq8MQ' },
-                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTtXZryIftR6QSYNAQNw2pAd9XzgxLJqbnKbD7b7Pq8MQ' },
                 { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT3CtKrKIr_SoAxu17iucJ1AQNhkcWIfFqePRAUxX3bzQE' },
-                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTp2KwlpYA8S5_Avksl28ucAXch1pIF14jD8QYyt8e8md0' }                       
+                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSsNK1n8ccLTKgb82qMmeEgAfXUA7YbKfAk6VYF7pCWwPc' },
+                { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQt0k6sNzZ6QZcjmYSKlxOcAbPz4KjZQATCWOOtY6Liu8Q' },
+                { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSGe-5MF-t5Tq8YC0sXw7ONAQKT2KD9iiDpXTfUmwVa14I' },
+                { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTPhzCDoxN2Q7imfOiJVCJ9AYp6HRtncSY0R1BC7XRmymI' },
+                { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQnQ3wLBblWQJ3YU4ZrsL8YASL57XPzfL-OYdECiKygTXc' },
+                { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSohDjeRf7JTYJZgxmMo54rAXgzbzmRHvW1PbaHkWsgB5s' },
+                { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRFDxvot4w-QatY41ariYecAemXTTQRz4cEmwH9m9MaK84' },
+                { date: '2024-11-11', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'n/a' },
+                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-14', time: '06:59', url: 'n/a' },
+                { date: '2024-11-15', time: '06:59', url: 'n/a' }                       
               ];
       
 function updateIframeSrc() {
