--- a/year8-today.html
+++ b/year8-today.html
@@ -144,7 +144,7 @@
                 { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT4Xck4zIUoT4SDpjVJz3cMAbZPCMBKHbi052sMmLK4pzo' },
                 { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTP6Krqyw1GRKh1oxoU5T-9AV4xTproyeLkaVCl0-j_RWA' },
                 { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSjqyyDYg0yT7yLuXuk-K0RARzvyDIVUZLP_-v0ub8tnOo' },
-                { date: '2024-11-08', time: '06:59', url: 'hhttps://1drv.ms/p/c/8dd37d65e185b290/IQTWSxV7AiGORbi_veAhlwFqAWKXqE4lXhN61cfytnzC3LI' },
+                { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWSxV7AiGORbi_veAhlwFqAWKXqE4lXhN61cfytnzC3LI' },
                 { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRYFTIZ5UPZRIf579fEIJVmAetLXUXAvJlo_hRPDX68xTg' },
                 { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9Sy7U_qFLR5tpjFiGF3z1AQ-PASdpzQX2t-JFh4MHEOg' },
                 { date: '2024-11-11', time: '06:59', url: 'n/a' },
