--- a/year8.html
+++ b/year8.html
@@ -127,10 +127,10 @@
             </div>
         </div>
         <div class="dropdown">
-            <a href="yesterdaysquestions.html" class="dropdown-btn">Yesterday's answers</a>
+            <a href="yesterdaysquestions.html" class="dropdown-btn">Today's answers</a>
             <div class="dropdown-content">
-                <a href="year7-yesterday.html">Year 7</a>
-                <a href="year8-yesterday.html">Year 8</a>
+                <a href="year7-answer.html">Year 7</a>
+                <a href="year8-answer.html">Year 8</a>
             </div>
         </div>
         <!-- These links will only appear in the side panel on mobile -->
@@ -146,7 +146,7 @@
         <div class="green-line"></div> <!-- Added green line here -->
         <div class="button-container">
             <a href="year8-today.html" class="button">Today's questions</a>
-            <a href="year8-yesterday.html" class="button button2">Yesterday's answers</a>
+            <a href="year8-answer.html" class="button button2">Today's answers</a>
         </div>
         <div style="height: 100px; background: #FFFDF5;"></div>
     </div>
