--- a/year7-answer.html
+++ b/year7-answer.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Yesterday's answers</a>
+            <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Today's answers</a>
             <div class="dropdown-content">
                 <a href="year7-answer.html">Year 7</a>
                 <a href="year8-answer.html">Year 8</a>
