--- a/about-us.html
+++ b/about-us.html
@@ -70,10 +70,10 @@
             </div>
         </div>
         <div class="dropdown">
-            <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Yesterday's answers</a>
+            <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Today's answers</a>
             <div class="dropdown-content">
-                <a href="year7-yesterday.html">Year 7</a>
-                <a href="year8-yesterday.html">Year 8</a>
+                <a href="year7-answer.html">Year 7</a>
+                <a href="year8-answer.html">Year 8</a>
             </div>
         </div>
         <!-- These links will only appear in the side panel on mobile -->
