--- a/Year7-today.html
+++ b/Year7-today.html
@@ -148,8 +148,8 @@
                 { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtv6WEuvqrSbekVgz06MDHAS9vBG9WtXvBCsJ98Ai1mAU' },
                 { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYGUxTTa7ZSoreKF41tEAcAWZKzdv6MCh8T8Y_tU1e2wU' },
                 { date: '2024-11-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSBb89Naz4lRaEy_q1TdRNoAbmqGTehq81vvTMh_dBxqlU' },
-                { date: '2024-11-12', time: '06:59', url: 'n/a' },
-                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaC8AzM7dfTqGfQyCJ0pdHAQvHSr7OZWgBiLZdz5SMVy4' },
+                { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ3c9HnpckkRIq1vfuPFJOrAdfPH2ljv7N5S5U0L4fgEUE' },
                 { date: '2024-11-14', time: '06:59', url: 'n/a' },
                 { date: '2024-11-15', time: '06:59', url: 'n/a' }                       
               ];
