--- a/year7-answer.html
+++ b/year7-answer.html
@@ -148,8 +148,8 @@
                 { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQz1gU011F4QqoU8bfHqLuaAUoQZSpEcEtKCbNcdTPep6o' },
                 { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxUxG74lBAR6DOQPn6Tq5sAQW2lzxa-qd2cnFTSsIAy7U' },
                 { date: '2024-11-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSAlUzzat7cQ6Z9B2cpMUFSAZCzhbBZ5R5IsYyTBh_2gbU' },
-                { date: '2024-11-12', time: '06:59', url: 'n/a' },
-                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSQVWfBFYemTqjArXyvyhGSAT_Dwie81vYzbd7VU-9RIKc' },
+                { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRIZxNsA2F4TaI7epIwmq2XAZlHqbu2w8t0apmj69X606k' },
                 { date: '2024-11-14', time: '06:59', url: 'n/a' },
                 { date: '2024-11-15', time: '06:59', url: 'n/a' }         
               ];
