--- a/year8-today.html
+++ b/year8-today.html
@@ -148,8 +148,8 @@
                 { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRYFTIZ5UPZRIf579fEIJVmAetLXUXAvJlo_hRPDX68xTg' },
                 { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9Sy7U_qFLR5tpjFiGF3z1AQ-PASdpzQX2t-JFh4MHEOg' },
                 { date: '2024-11-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTyu8tubPO6QJHU8nUGkbgCAUFPjNotQoWnAwa3UlYHS7c' },
-                { date: '2024-11-12', time: '06:59', url: 'n/a' },
-                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSqOVrrxBg_TpJSuByAFV72AfJP-gfh7UF1K0zpcNHJC7s' },
+                { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQc4_WvSilDQLw7Bq17qY0uAVJmaEn3RjuGVjVWsZal5Hg' },
                 { date: '2024-11-14', time: '06:59', url: 'n/a' },
                 { date: '2024-11-15', time: '06:59', url: 'n/a' }                                           
               ];      
