--- a/year8-answer.html
+++ b/year8-answer.html
@@ -148,8 +148,8 @@
                 { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSohDjeRf7JTYJZgxmMo54rAXgzbzmRHvW1PbaHkWsgB5s' },
                 { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRFDxvot4w-QatY41ariYecAemXTTQRz4cEmwH9m9MaK84' },
                 { date: '2024-11-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSAfQzyviUbTpKRmzf-Pqb7Af7NJf1Mfl8pOYgfYmu0q8I' },
-                { date: '2024-11-12', time: '06:59', url: 'n/a' },
-                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQReI45B6X0KR4RL4Z_qcuzKAYBAeblTBL9uRjTC8iR7JuU' },
+                { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRnCvFHrTApRZVEP7yvm93CAWFPO2dB0xVfAsoK6jfV8MA' },
                 { date: '2024-11-14', time: '06:59', url: 'n/a' },
                 { date: '2024-11-15', time: '06:59', url: 'n/a' }                       
               ];
