--- a/Year7-today.html
+++ b/Year7-today.html
@@ -151,7 +151,7 @@
                 { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaC8AzM7dfTqGfQyCJ0pdHAQvHSr7OZWgBiLZdz5SMVy4' },
                 { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ3c9HnpckkRIq1vfuPFJOrAdfPH2ljv7N5S5U0L4fgEUE' },
                 { date: '2024-11-14', time: '06:59', url: 'nhttps://1drv.ms/p/c/8dd37d65e185b290/IQQz8XPgf8XISbjQUfvrPeL6AXIMJRoXyUsKsqhslceBDBY' },
-                { date: '2024-11-15', time: '06:59', url: 'n/a' }                       
+                { date: '2024-11-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR0yqmndP4GQLOiPeqhy8FzAYb-52NwITxwwps-8oagzVA' }                       
               ];
       
               function updateIframeSrc() {
