--- a/year8-today.html
+++ b/year8-today.html
@@ -139,19 +139,19 @@
           <script>
             
               const schedule = [
-                { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT9_6ZfJ2MESo-9W6Cwi9n6Af0gWBx2HyJw2kw-Ptz3-Pc' },
-                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRNP1Yw1wJQoOuHXcUNamYATFZcwA_JZAvCyPdRDlw-FU' },
-                { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT4Xck4zIUoT4SDpjVJz3cMAbZPCMBKHbi052sMmLK4pzo' },
-                { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTP6Krqyw1GRKh1oxoU5T-9AV4xTproyeLkaVCl0-j_RWA' },
-                { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSjqyyDYg0yT7yLuXuk-K0RARzvyDIVUZLP_-v0ub8tnOo' },
-                { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWSxV7AiGORbi_veAhlwFqAWKXqE4lXhN61cfytnzC3LI' },
-                { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRYFTIZ5UPZRIf579fEIJVmAetLXUXAvJlo_hRPDX68xTg' },
-                { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9Sy7U_qFLR5tpjFiGF3z1AQ-PASdpzQX2t-JFh4MHEOg' },
-                { date: '2024-11-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTyu8tubPO6QJHU8nUGkbgCAUFPjNotQoWnAwa3UlYHS7c' },
-                { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSqOVrrxBg_TpJSuByAFV72AfJP-gfh7UF1K0zpcNHJC7s' },
-                { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQc4_WvSilDQLw7Bq17qY0uAVJmaEn3RjuGVjVWsZal5Hg' },
-                { date: '2024-11-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSH54V6zJG_RI0l0Bu_Yj06AdzqI7L-DxVremlVlTcgnM8' },
-                { date: '2024-11-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbtd0P3P0MTrUEoWtW13piARGPfCL7CRtkkCcZKgIHbq8' }                                           
+                { date: '2024-11-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSNk7LtafXmRYQge8T1R23LAQyx19MOAlvDtuGuCZ-TsZI' },
+                { date: '2024-11-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS-glRMuy7_To7q8jghH6HZAfLKpXLd05uBb16FAp-pN44' },
+                { date: '2024-11-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShfmO8YJp1Sr-m5F_Ty9QnAWFJLqm5qY8Kwvsg1pp29ls' },
+                { date: '2024-11-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQX3CF1qhlXT4soEPL_4LiUAZ982ZBeBY3ubp5gnqFst0w' },
+                { date: '2024-11-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdUHWJTsFrT4X9xMJxBrvNAekUKBRtWUXmOD3f43skOCQ' },
+                { date: '2024-11-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQAd4-CDcWZR74rWb0F7wbTAZfpZ337_Cut9pL4XRpmSvM' },
+                { date: '2024-11-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQeCPea16S-QJmMvCq9ogMtAVmInL4l6GO_EbOlFDnJJF0' },
+                { date: '2024-11-25', time: '06:59', url: 'n/a' },
+                { date: '2024-11-26', time: '06:59', url: 'n/a' },
+                { date: '2024-11-27', time: '06:59', url: 'n/a' },
+                { date: '2024-11-28', time: '06:59', url: 'n/a' },
+                { date: '2024-11-29', time: '06:59', url: 'n/a' },
+                { date: '2024-11-30', time: '06:59', url: 'n/a' }                                           
               ];      
       
 function updateIframeSrc() {
