--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,19 +139,19 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTmbD0yJAXHTYndI1GR7OGgAX7FISUrXDfX1i73tmyruvk' },
-                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaPv5wZ3UBT6q4Bvq9hO86AbR-jMAIK_6oVH6nC3IGUg4' },
-                { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR_78GKR6UmR4WPGLAlSBunARx3HYWPWEJBnInb2wPnCdc' },
-                { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ1jRzQwCUQQoISOgBrjgnyAQFKXxDsrSEQ5pZCmqxO9PE' },
-                { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQqXXtNQPMGQpmUZWzIcNlSAWpRbGfMzb77ZjWi6vyztoc' },
-                { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMW4obs8tSTYdD5f8L-Zo-AcuOD7IeujOOpGbKtG4nG38' },
-                { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtv6WEuvqrSbekVgz06MDHAS9vBG9WtXvBCsJ98Ai1mAU' },
-                { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYGUxTTa7ZSoreKF41tEAcAWZKzdv6MCh8T8Y_tU1e2wU' },
-                { date: '2024-11-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSBb89Naz4lRaEy_q1TdRNoAbmqGTehq81vvTMh_dBxqlU' },
-                { date: '2024-11-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaC8AzM7dfTqGfQyCJ0pdHAQvHSr7OZWgBiLZdz5SMVy4' },
-                { date: '2024-11-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ3c9HnpckkRIq1vfuPFJOrAdfPH2ljv7N5S5U0L4fgEUE' },
-                { date: '2024-11-14', time: '06:59', url: 'nhttps://1drv.ms/p/c/8dd37d65e185b290/IQQz8XPgf8XISbjQUfvrPeL6AXIMJRoXyUsKsqhslceBDBY' },
-                { date: '2024-11-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQi_c7exynDTKKQlXajtAZ0AYzA3_RSoxBnERVHoTwPbgs' }                       
+                { date: '2024-11-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQRFe9uBoOCTYYf6tGL9ZJhAXSJAPdjAf8vyAXwvD5D77w' },
+                { date: '2024-11-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ_HGjAQuBjSZ4JEwgVomuPAWYD-4XcCmP_dRYyopMcTgg' },
+                { date: '2024-11-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRQdN1o6hhFRpw03-CXPdYvAVRxVjtzBIlLUzPPsyLlVeo' },
+                { date: '2024-11-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQlxjo8ghF_S6rZfeql05OFASv0sFqE4PUcpJquwkH_K6Y' },
+                { date: '2024-11-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTMjgAQ9u56Q6r6SIrayDrLAczJJBZEoS9hwGM-3xLRlbA' },
+                { date: '2024-11-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSsTXFY_DQFQIKJc0-TV298AcbnMTSwCP7akNatuKR-S54' },
+                { date: '2024-11-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ9yYKKRlhFRI3-OuXbPDT0AQXSVXJZseuz9OjAEh19reQ' },
+                { date: '2024-11-25', time: '06:59', url: 'n/a' },
+                { date: '2024-11-26', time: '06:59', url: 'n/a' },
+                { date: '2024-11-27', time: '06:59', url: 'n/a' },
+                { date: '2024-11-28', time: '06:59', url: 'n/a' },
+                { date: '2024-11-29', time: '06:59', url: 'n/a' },
+                { date: '2024-11-30', time: '06:59', url: 'n/a' }                        
               ];
       
               function updateIframeSrc() {
