--- a/year8-answer.html
+++ b/year8-answer.html
@@ -146,8 +146,8 @@
                 { date: '2024-11-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQohmpi0sUmT6y9p7PraGnQAWV7Wzug7dmtPiZ8OD73n4U' },
                 { date: '2024-11-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRA4aHW15bgTaZ0YAJrv1I1AeWo0w3V0R2OEFHDukxNWBI' },
                 { date: '2024-11-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQFeVkPy49bRqnhcEqvOtRbAflciWHJAR-TzGANdqTHDsQ' },
-                { date: '2024-11-25', time: '06:59', url: 'n/a' },
-                { date: '2024-11-26', time: '06:59', url: 'n/a' },
+                { date: '2024-11-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSSaPH2sJggQbay1KX8R-i5AaUDULv1gEsm6EApI1VtRsQ' },
+                { date: '2024-11-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT-NR7BKbxFTp2XdqZkoBarAS4xq5WywQlVRgJcvLhNisI' },
                 { date: '2024-11-27', time: '06:59', url: 'n/a' },
                 { date: '2024-11-28', time: '06:59', url: 'n/a' },
                 { date: '2024-11-29', time: '06:59', url: 'n/a' },
