--- a/year7-answer.html
+++ b/year7-answer.html
@@ -146,8 +146,8 @@
                 { date: '2024-11-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSy_fwcxskXT7h-Z46Y7Ik3ASymCJQsmi60PkNOITw28_c' },
                 { date: '2024-11-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRB9yaxuEoLQJNrZ9YewmQ7AUfh3QYtrrINq4qQv-fiNko' },
                 { date: '2024-11-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQCDDe8XHQsS5EXdkG7RWhTAeuUwBDWOmYbgtUvbmUnS-I' },
-                { date: '2024-11-25', time: '06:59', url: 'n/a' },
-                { date: '2024-11-26', time: '06:59', url: 'n/a' },
+                { date: '2024-11-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQuGPGoUi3XSoHGWSGuMm2LAWOoDO6RdOYGjIBf9ypHA8U' },
+                { date: '2024-11-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRIpgeOO2ztR5yz77rYgpwAARgtYlG4tVrQPNzJPcBjBSc' },
                 { date: '2024-11-27', time: '06:59', url: 'n/a' },
                 { date: '2024-11-28', time: '06:59', url: 'n/a' },
                 { date: '2024-11-29', time: '06:59', url: 'n/a' },
