--- a/Year7-today.html
+++ b/Year7-today.html
@@ -148,7 +148,7 @@
                 { date: '2024-11-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ9yYKKRlhFRI3-OuXbPDT0AQXSVXJZseuz9OjAEh19reQ' },
                 { date: '2024-11-25', time: '06:59', url: 'nhttps://1drv.ms/p/c/8dd37d65e185b290/IQRmmnY39jdXSquUI3gqNVu6Adjt1KRVi7LXFPsrufqFbLI' },
                 { date: '2024-11-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXvcL6KBPYT7YorCK02OKzAYkh-TA8crjWpXNW9Pi0z9o' },
-                { date: '2024-11-27', time: '06:59', url: 'n/a' },
+                { date: '2024-11-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQmZsO14a3jRp1ibQxldxl5AatuKurEyfEOtnGzfjplIzo' },
                 { date: '2024-11-28', time: '06:59', url: 'n/a' },
                 { date: '2024-11-29', time: '06:59', url: 'n/a' },
                 { date: '2024-11-30', time: '06:59', url: 'n/a' }                        
