--- a/year8-today.html
+++ b/year8-today.html
@@ -148,7 +148,7 @@
                 { date: '2024-11-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQeCPea16S-QJmMvCq9ogMtAVmInL4l6GO_EbOlFDnJJF0' },
                 { date: '2024-11-25', time: '06:59', url: 'nhttps://1drv.ms/p/c/8dd37d65e185b290/IQQhZcV0ar94QrZsdTYH8xqQAczqt833tAh0OTYC7PIswjs' },
                 { date: '2024-11-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS68ukU6vbxRKhyogtZQoD3Ae3q5oQIv3TmyuJFdzs4uU0' },
-                { date: '2024-11-27', time: '06:59', url: 'n/a' },
+                { date: '2024-11-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwlvNeoOYuT5DEciTQiiKiAdvuaKaxvN4umdcruut9vOc' },
                 { date: '2024-11-28', time: '06:59', url: 'n/a' },
                 { date: '2024-11-29', time: '06:59', url: 'n/a' },
                 { date: '2024-11-30', time: '06:59', url: 'n/a' }                                           
