--- a/year8-today.html
+++ b/year8-today.html
@@ -149,9 +149,9 @@
                 { date: '2024-11-25', time: '06:59', url: 'nhttps://1drv.ms/p/c/8dd37d65e185b290/IQQhZcV0ar94QrZsdTYH8xqQAczqt833tAh0OTYC7PIswjs' },
                 { date: '2024-11-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS68ukU6vbxRKhyogtZQoD3Ae3q5oQIv3TmyuJFdzs4uU0' },
                 { date: '2024-11-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwlvNeoOYuT5DEciTQiiKiAdvuaKaxvN4umdcruut9vOc' },
-                { date: '2024-11-28', time: '06:59', url: 'n/a' },
-                { date: '2024-11-29', time: '06:59', url: 'n/a' },
-                { date: '2024-11-30', time: '06:59', url: 'n/a' }                                           
+                { date: '2024-11-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSSF3kc1es2TbSbI1E3Hxf0AUJVulUE4izCoYi3AEivag0' },
+                { date: '2024-11-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSZNpJOUUYASrJ2EKDnkYojAUE2vWAqCHrJ13q287ImNMo' },
+                { date: '2024-11-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQnRA64CQZ6Q4dd8UsR_CZRAZLWSOqfTEE0aXE7ZQoRoAg' }                                           
               ];      
       
 function updateIframeSrc() {
