--- a/year7-answer.html
+++ b/year7-answer.html
@@ -149,9 +149,9 @@
                 { date: '2024-11-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQuGPGoUi3XSoHGWSGuMm2LAWOoDO6RdOYGjIBf9ypHA8U' },
                 { date: '2024-11-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRIpgeOO2ztR5yz77rYgpwAARgtYlG4tVrQPNzJPcBjBSc' },
                 { date: '2024-11-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTenABG8BRhTb8RSLKALbqAAVK4uAm0j09ONbi1-erGhIs' },
-                { date: '2024-11-28', time: '06:59', url: 'n/a' },
-                { date: '2024-11-29', time: '06:59', url: 'n/a' },
-                { date: '2024-11-30', time: '06:59', url: 'n/a' }           
+                { date: '2024-11-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRbkCk3or5xQaSkxHekhLY2AbJvnqzGEUxVb-DmmIb7xQA' },
+                { date: '2024-11-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSVnAG6W5suS6Vui3Zo-5vVATotmJoHpmEer_yGOL-ySUE' },
+                { date: '2024-11-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSO7sL0NpFZT51qryxNYkenAe0W3JDRHo4ai3O7jIqS15U' }           
               ];
       
 function updateIframeSrc() {
