--- a/Year7-today.html
+++ b/Year7-today.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Yesterday's answers</a>
+            <a href="javascript:void(0)" class="dropdown-btn" onclick="toggleDropdown(this)">Today's answers</a>
             <div class="dropdown-content">
                 <a href="year7-answer.html">Year 7</a>
                 <a href="year8-answer.html">Year 8</a>
@@ -142,7 +142,7 @@
                 { date: '2024-12-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShWHmeHNyXSYVmpht8jR6LAYozXvjSjwn2UY2XwCyIT5c' },
                 { date: '2024-12-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT8jA5UbehXQ6X_ur3BhyJbAeAPEs967V4BtpbfJDBjM1k' },
                 { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQy9t0Ru6wLQKA7ux_fBqdCAb7Gay153QQ35e6RN0sL_xY' },
-                { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d6wkH_K6Y' },
+                { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQz3ifmQn9oQqhP4cXnzdgaAYbauheLrE-HaCpL6StbZb0' },
                 { date: '2024-12-05', time: '06:59', url: 'https:/lbA' },
                 { date: '2024-12-06', time: '06:59', url: 'ht4' },
                 { date: '2024-12-07', time: '06:59', url: 'httQ' },
