--- a/year7-answer.html
+++ b/year7-answer.html
@@ -143,10 +143,10 @@
                 { date: '2024-12-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRydMQjolQOS6Wjd6urp2uTAXlccXHR_1ZR-qRdvW9HN5s' },
                 { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR2B7GEAbOGS4lkHsOHIX8yAfNJs-IEZXDCRWIQZP4cl5Q' },
                 { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTAT0HMMC6NQZqnJKRBGNSyAS8ytqNWcJDZN9zlgwme4qA' },
-                { date: '2024-12-05', time: '06:59', url: 'n/a' },
-                { date: '2024-12-06', time: '06:59', url: 'n/a' },
-                { date: '2024-12-07', time: '06:59', url: 'n/a' },
-                { date: '2024-12-08', time: '06:59', url: 'n/a' },
+                { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdTdX7mdaqS57VnKxpWc86AVbfabIA0h3i55EQmVbHUug' },
+                { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTAkc9Tg9MYRJejzl5JuOn3AfodYevaeEichXl_tnFXc0o' },
+                { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRwsw24Z9M-RYIrNCDhpzC1ATxHAOGFtthvVpYZmLMRNTc' },
+                { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ9bfrhT2qRR4YFJtgkySo0AVbji82NptQYj3ZwCa2RN3g' },
                 { date: '2024-12-09', time: '06:59', url: 'n/a' },
                 { date: '2024-12-10', time: '06:59', url: 'n/a' },
                 { date: '2024-12-11', time: '06:59', url: 'n/a' },
