--- a/year8-today.html
+++ b/year8-today.html
@@ -143,7 +143,7 @@
                 { date: '2024-12-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR5GChyDbyUT7gcfCKTV-ObAcv_su5QkXYCcM2VA8uDf3c' },
                 { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRcD7UgRlbaQbGtCuf8BR7MAQV1KLHD-pOceeIUjS3WhqY' },
                 { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRClMsNg2CUT597IDfaYEhmAW9LYxk_YFij-4Cn1ecVNpY' },
-                { date: '2024-12-05', time: '06:59', url: 'n/a' },
+                { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoKhZvCZxOT4obDYyo2ATsAVYxo-gIN6KiG4YFhCphWwI' },
                 { date: '2024-12-06', time: '06:59', url: 'n/a' },
                 { date: '2024-12-07', time: '06:59', url: 'n/a' },
                 { date: '2024-12-08', time: '06:59', url: 'n/a' },
