--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,19 +139,19 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-12-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShWHmeHNyXSYVmpht8jR6LAYozXvjSjwn2UY2XwCyIT5c' },
-                { date: '2024-12-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT8jA5UbehXQ6X_ur3BhyJbAeAPEs967V4BtpbfJDBjM1k' },
-                { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQy9t0Ru6wLQKA7ux_fBqdCAb7Gay153QQ35e6RN0sL_xY' },
-                { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQz3ifmQn9oQqhP4cXnzdgaAYbauheLrE-HaCpL6StbZb0' },
                 { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6apZO8gDZS4yalAmcOpCLAU6cJwBo77Wh-xc00l4ZSjU' },
                 { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSqwyyJkXVPQJrItXwGQmTXAWdbqFmifuie-eUumxUbSmE' },
                 { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRkVdkE4H48Qrm5gHRn8ogUAVzzBxaHobF8hBNLREfeyOk' },
                 { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRqKC6DrU4qR6ED4Z1BnfahAaVk0lAH6bDbCEpkGaQSl3I' },
                 { date: '2024-12-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSFyneRZGJPT4r-BF32JMdkAcgS1dLLAxtWiCb3T3yKQJ4' },
-                { date: '2024-12-10', time: '06:59', url: 'https://1zfjplIzo' },
-                { date: '2024-12-11', time: '06:59', url: 'https://1drvEs' },
-                { date: '2024-12-12', time: '06:59', url: 'https0' },
-                { date: '2024-12-13', time: '06:59', url: 'h' }                        
+                { date: '2024-12-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTFhR7wz9jRRY2iCZptYDEbAV7CJVLzoBnBbGpEM1fFJT0' },
+                { date: '2024-12-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ6FhXaDc02SYTrMtXZdilgAbxE65cE5Pim-QY2yWtvwW4' },
+                { date: '2024-12-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRipq98yXFVQITCF8u7zBE7AS5bg_YAZjWJ53lIryZpaOk' },
+                { date: '2024-12-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTw_Vb2zylRT5xOUhvDAGh5AaWiO_qvNv87advc1n86syc' },
+                { date: '2024-12-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTvuCg931o2SITcuaJmoCALASKID8nIEOvqDebmUlxpqU4' },
+                { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsq6uC-NNBQqNumZOleyGYAZraHsnegd5gs_Ps9AlqEqw' },
+                { date: '2024-12-16', time: '06:59', url: 'n/a' },
+                { date: '2024-12-17', time: '06:59', url: 'n/a' }                        
               ];
       
               function updateIframeSrc() {
