--- a/year8-today.html
+++ b/year8-today.html
@@ -147,9 +147,9 @@
                 { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ2nEYI--I5TI9yJDDxHZQXAdMNUtf5Dm0L_N3XcTDE9CI' },
                 { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSOEUAN1KdaS4qUQcTv2dC5AXaRFGwlto_OSWJ_tRWcf5U' },
                 { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfeq2sMGHpRIw5hxCJisDqAe7-Kuf0gFiFyJJgyUYfT1g' },
-                { date: '2024-12-09', time: '06:59', url: 'n/a' },
-                { date: '2024-12-10', time: '06:59', url: 'n/a' },
-                { date: '2024-12-11', time: '06:59', url: 'n/a' },
+                { date: '2024-12-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSUL_5FKZJcQ7z4-FpuUoFUAWjx0HBJRGfRnfr11odb6LM' },
+                { date: '2024-12-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSeuptiQq-LS6n0vvtSB0xLAT_wFNjZA4-nY766M1lIluc' },
+                { date: '2024-12-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ232q09kAcSozS2RAAcCfsASkEwZ0BtlrBYUYJkOElLks' },
                 { date: '2024-12-12', time: '06:59', url: 'n/a' },
                 { date: '2024-12-13', time: '06:59', url: 'n/a' }                                           
               ];      
